# JEPO_LE

./: README.md
Jepo_LE_SHARE/: protonReader_v2.Cpp
Jepo_LE_SHARE/jepo_LE/: README.md  jepo.sh  protonC-140MeV
Jepo_LE_SHARE/jepo_LE/source/: 100k_event.mac  10k_event.mac  CMakeLists.txt  README  config.cfg  init_vis.mac  jepo.cc  jepo.cc~  vis.mac
Jepo_LE_SHARE/jepo_LE/source/include/: BT2017ActIni.hh  BT2017Ana.hh  BT2017ConMan.hh  BT2017DetMap.hh  BT2017EveAct.hh  BT2017PriGenAct.hh  BT2017RunAct.hh  BT2017SteAct.hh  EmCalorimeterHit.hh  EmCalorimeterSD.hh  JePoDetCon.hh  JediHadronicPhysics.hh  JediPhysicsListFactory.hh  LGAD_Hit.hh  LGAD_SD.hh
Jepo_LE_SHARE/jepo_LE/source/src/: BT2017ActAni.cc  BT2017ConMan.cc  BT2017DetMap.cc  BT2017EveAct.cc  BT2017EveAct.cc~  BT2017PriGenAct.cc  BT2017PriGenAct.cc~  BT2017RunAct.cc  BT2017RunAct.cc~  BT2017SteAct.cc  EmCalorimeterHit.cc  EmCalorimeterSD.cc  EmCalorimeterSD.cc~  JePoDetCon.cc  LGAD_Hit.cc  LGAD_SD.cc
Jepo_LE_SHARE/jepo_LE/source/trash/include/: GenEventProducer.hh  JediDeuteronElasticProcess.hh  JediElasticCrossSectionData.hh  VInteractionGenerator.hh
Jepo_LE_SHARE/jepo_LE/source/trash/src/: GenEventProducer.cc  InteractionElasticF.cc  JediDeuteronElastic.cc  JediDeuteronElasticProcess.cc  JediElasticCrossSectionData.cc  JediHadronicPhysics.cc
